[tool.poetry]
name = "hexlet-code"
version = "0.0.0"
description = "Third project"
authors = ["Renata_Mutalova <41615@mail.ru>"]
packages = [
  { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
bs4 = "^0.0.1"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
page_loader = "page_loader.scripts.page_load:main"
